# another_tic_tac_toe

./: README.md  main.go  minimax.go
.github/workflows/: go.yml  rust.yml
proto/: tictactoe.proto
server/: Cargo.toml  build.rs
server/proto/: tictactoe.proto
server/src/: client.rs  server.rs  tictactoe.rs
tui/: go.mod  go.sum  main.go  tictactoe.pb.go  tictactoe_grpc.pb.go
tui/game/: go.mod  main.go
tui/generated_grpc/: go.mod  tictactoe.pb.go  tictactoe_grpc.pb.go
